Model delete fix , homepage and general modification

--- a/templates/index.html
+++ b/templates/index.html
@@ -145,20 +145,53 @@
                     </div> <!-- row -->
                 </div>
             </div> <!-- row -->
+            <div class="row justify-content-center">
                 <div class="col-lg-4 col-md-7 col-sm-9">
                     <div class="single-features mt-40">
                         <div class="features-title-icon d-flex justify-content-between">
-                            <h4 class="features-title"><a href="#">Başlık</a></h4>
+                            <h3 class="features-title">Kopya Önleyici</h3>
                             <div class="features-icon">
                                 <i class="lni lni-bolt"></i>
                                 <img class="shape" src="static/assets/images/f-shape-1.svg" alt="Shape">
                             </div>
                         </div>
                         <div class="features-content">
-                            <p class="text">Metin</p>
+                            <p class="text">Öğrenciler sınav döneminde sınıflara dengeli bir şekilde dağıtılarak
+                            aynı sınıftaki öğrencilerin kopya çekmesi minimum seviyeye iner.</p>
                         </div>
                     </div> <!-- single features -->
                 </div>
+                <div class="col-lg-4 col-md-7 col-sm-9">
+                    <div class="single-features mt-40">
+                        <div class="features-title-icon d-flex justify-content-between">
+                            <h3 class="features-title">E-Okul Uyumlu</h3>
+                            <div class="features-icon">
+                                <i class="lni lni-bolt"></i>
+                                <img class="shape" src="static/assets/images/f-shape-1.svg" alt="Shape">
+                            </div>
+                        </div>
+                        <div class="features-content">
+                            <p class="text">Öğrencileri sisteme e-okuldan indirdiğiniz listeler ile hiçbir 
+                            düzenleme yapmadan kolayca ekleyebilirsiniz. </p>
+                        </div>
+                    </div> <!-- single features -->
+                </div>
+                <div class="col-lg-4 col-md-7 col-sm-9">
+                    <div class="single-features mt-40">
+                        <div class="features-title-icon d-flex justify-content-between">
+                            <h3 class="features-title">Anında Bildirim !</h3>
+                            <div class="features-icon">
+                                <i class="lni lni-bolt"></i>
+                                <img class="shape" src="static/assets/images/f-shape-1.svg" alt="Shape">
+                            </div>
+                        </div>
+                        <div class="features-content">
+                            <p class="text">Sınav takvimleri oluşturulduğu anda tüm öğrencileriniz
+                            sınavlar hakkında mail ile bilgilendirin."Hocam sınav ne zaman" sorularına veda edin.</p>
+                        </div>
+                    </div> <!-- single features -->
+                </div>   
+              </div>  
             </div> <!-- row -->
         </div> <!-- container -->
     </section>    
@@ -176,7 +209,7 @@
                 <div class="col-lg-6 col-md-10">
                     <div class="section-title text-center pb-30">
                         <h3 class="title">Biz Kimiz</h3>
-                        <p class="text"></p>
+                        <p class="text">Geliştiric Takım ile Tanışın</p>
                     </div> <!-- section title -->
                 </div>
             </div> <!-- row -->
