--- a/templates/404.html
+++ b/templates/404.html
@@ -1,3 +1,5 @@
+
+<html>
 {% extends 'layout.html' %}
 
 {% block title %}
@@ -11,3 +13,4 @@
 <a href="/" class="btn btn-primary">Anasayfaya Dön</a>
 
 {% endblock content %}
+</html>
