--- a/templates/includes/navbar.html
+++ b/templates/includes/navbar.html
@@ -1,4 +1,6 @@
-<nav class="navbar navbar-expand-lg navbar-dark bg-primary">
+{% load static %}
+<link rel="stylesheet" href="{% static 'css/style.css' %}">
+<nav class="navbar navbar-expand-lg navbar-dark">
   <a class="navbar-brand" href="/">Exam Scheduling</a>
   <ul class="navbar-nav mr-auto">
     <li class="nav-item active">
