--- a/templates/registerschool.html
+++ b/templates/registerschool.html
@@ -1,3 +1,4 @@
+<html>
 {% extends 'layout.html' %} {% block title %} Okul Kaydet {% endblock title %}
 {%block content %} {% load crispy_forms_tags %}
 {% if messages %}
@@ -28,3 +29,4 @@
     {% endblock content %}
   </div>
 </div>
+</html>
