--- a/templates/schooladmin_schedule_details.html
+++ b/templates/schooladmin_schedule_details.html
@@ -1,3 +1,4 @@
+<html>
 {% extends 'layout.html' %}
 {% block title %}
     Takvim Detay
@@ -32,16 +33,6 @@ button {
 
     {# Django Tempus Dominus assets are included in `{{ form.media }}` #}
     {{ form.media }}
-
-<style>
-body {
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzWcX4ZmB6lCNzlnseyE4B7QyUBW_YCW8hDw&usqp=CAU');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
-}
-</style>
-
 <div class="container">
 
   <div class="row">
@@ -1070,3 +1061,5 @@ body {
 
 
 {% endblock content %}
+
+</html>
