--- a/templates/student_schedule_details.html
+++ b/templates/student_schedule_details.html
@@ -1,3 +1,4 @@
+<html>
 {% extends 'layout.html' %}
 {% block title %}
     Takvim Detay
@@ -23,15 +24,6 @@ button {
     {% endfor %}
 </ul>
 {% endif %}
-
-<style>
-body {
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzWcX4ZmB6lCNzlnseyE4B7QyUBW_YCW8hDw&usqp=CAU');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
-}
-</style>
 
 <div class="container">
 
@@ -212,11 +204,5 @@ body {
     </div>
   </div>
 </div>
-
-
-
-
-
-
-
 {% endblock content %}
+</html>
