--- a/templates/teacher_exam.html
+++ b/templates/teacher_exam.html
@@ -1,3 +1,4 @@
+<html>
 {% extends 'layout.html' %}
 {% block title %}
     Sınavlar
@@ -23,14 +24,6 @@
 
     {# Django Tempus Dominus assets are included in `{{ form.media }}` #}
     {{ form.media }}
-<style>
-body {
-  background-image: url('https://encrypted-tbn0.gstatic.com/images?q=tbn:ANd9GcTzWcX4ZmB6lCNzlnseyE4B7QyUBW_YCW8hDw&usqp=CAU');
-  background-repeat: no-repeat;
-  background-attachment: fixed;
-  background-size: 100% 100%;
-}
-</style>
 <div class="container">
   <div class="row">
     <div class="col">
@@ -97,3 +90,4 @@ body {
 
 
 {% endblock content %}
+</html>
