--- a/templates/teacher.html
+++ b/templates/teacher.html
@@ -18,9 +18,8 @@
 {% endif %}
 <h3>Öğretmen Ana Sayfası</h3>
 <hr>
-    <button type="button" style="background-color: aliceblue">
-        <a href="/teacher/exam/">Sınavlar</a>
-    </button>
+<br>
+    <a class="btn btn-primary btn-lg btn-block" href="/teacher/exam/">Sınavlar</a>
 
 {% endblock content %}
 </html>
