--- a/templates/student.html
+++ b/templates/student.html
@@ -18,11 +18,9 @@
 {% endif %}
 <h3>Öğrenci Anasayfa</h3>
 <hr>
+<br>
 
-
-    <button type="button">
-        <a href="/student/schedule/">Sınav detayları!</a>
-    </button>
+    <a class="btn btn-primary btn-lg btn-block" href="/student/schedule/">Sınav detayları!</a>
 
 {% endblock content %}
 </html>
